fix bootstrap prob on firefox

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,3 +20,6 @@ body {
   padding-top: 60px;
 }
 
+* {
+  -moz-box-sizing: border-box;
+}
